feat(auth): integrate JWT-based authentication and secure all endpoints